--- a/.github/workflows/release-on-tag.yml
+++ b/.github/workflows/release-on-tag.yml
@@ -2,8 +2,8 @@ name: Release Charts
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "*" 
 
 jobs:
   release:
@@ -26,7 +26,21 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v3
 
-      #- name: Run chart-releaser
-      #  uses: helm/chart-releaser-action@v1.6.0
-      #  env:
-      #    CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Package helm
+        run: |
+          # VERSION=${{ github.event.release.tag_name }}
+          VERSION=${{ github.ref_name }}
+          rm -rf .cr-release-packages
+          mkdir -p .cr-release-packages
+          helm package \
+            charts/lib-hoy \
+            --app-version=${VERSION:1} \
+            --version=${VERSION:1} \
+            --destination=.cr-release-packages \
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.6.0
+        with:
+          skip_packaging: true
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
