--- a/charts/lib-hoy/templates/_serviceaccount.yaml
+++ b/charts/lib-hoy/templates/_serviceaccount.yaml
@@ -1,19 +1,18 @@
-{{- define "lib-hoy.configmap.tpl" -}}
+{{- define "lib-hoy.serviceaccount.tpl" -}}
 {{ $name := required "'name' must be provided" .name }}
 apiVersion: v1
-kind: ConfigMap
+kind: ServiceAccount
 metadata:
-  name: {{ $name }}
-data: {}
+  name: "{{ $name }}"
 {{- end -}}
 
-{{- define "lib-hoy.configmap" -}}
+{{- define "lib-hoy.serviceaccount" -}}
 {{ $name := required "'name' must be provided" .name }}
 {{ $subsystem := required "'name' must be set in Values.subsystem" $.Values.subsystem.name }}
 {{- include "lib-hoy.util.merge" (
     list
         .
-        (printf "%s.%s-configmap.merge" $subsystem $name)
-        "lib-hoy.configmap.tpl"
+        (printf "%s.%s-serviceaccount.merge" $subsystem $name)
+        "lib-hoy.serviceaccount.tpl"
     ) -}}
 {{- end -}}
