--- a/charts/lib-hoy/templates/_vargetters.yaml
+++ b/charts/lib-hoy/templates/_vargetters.yaml
@@ -5,7 +5,7 @@ Get project instance value
 Pass in a dict ( "scope" "SCOPE" "var" "VARNAME" ) e.g. dict ( "scope" . "var" "subsystem_instance_account_name" )
 */}}
 {{- define "instance_var" -}}
-{{- tpl ( printf "{{ .Values.global.project_%s.%s }}" .Values.global.project.instance .var ) .scope | required ( printf "Missing project instance var var: project-%s %s" .Values.global.project.instance .var ) -}}
+{{- tpl ( printf "{{ .Values.project_%s.%s }}" .Values.project.instance .var ) .scope | required ( printf "Missing project instance var var: project-%s %s" .Values.project.instance .var ) -}}
 {{- end -}}
 
 {{/* --- subsystem instance helpers --- */}}
@@ -14,6 +14,6 @@ Get subsystem instance value
 Pass in a dict ( "scope" "SCOPE" "var" "VARNAME" ) e.g. dict ( "scope" . "var" "subsystem_instance_account_name" )
 */}}
 {{- define "subsystem_instance_var" -}}
-{{- tpl ( printf "{{ .Values.global.subsystem_%s.%s }}" .Values.global.subsystem.instance .var ) .scope | required ( printf "Missing project instance var var: project-%s %s" .Values.global.subsystem.instance .var ) -}}
+{{- tpl ( printf "{{ .Values.subsystem_%s.%s }}" .Values.subsystem.instance .var ) .scope | required ( printf "Missing project instance var var: project-%s %s" .Values.subsystem.instance .var ) -}}
 {{- end -}}
 
